# better-whoami-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: build-and-push.yaml
better_whoami/: app.py
better_whoami/routes/: connectivity.py  environment_variables.py  healthz.py  system_info.py  user_info.py  whoami.py
